--- a/02Exercicio/formularioCliente.html
+++ b/02Exercicio/formularioCliente.html
@@ -17,7 +17,7 @@
 			<input type="text" name="telefone" placeholder="Ex: (31)9999-9999"><br/><br/>
 		</div>
 		<br><br>
-		<div>
+		<div class="esp">
 			<label >Gênero: </label><br/>
 			<input type="radio" id="masculino" name="genero" value="M">
 			<label for="genero">Masculino </label><br/>
